# Epydios-Agent-Operations-Plane

./: .gitignore  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  go.mod  go.sum
.github/: pull_request_template.md
.github/workflows/: pr-kind-phase03-gate.yml  release-images-ghcr.yml
clients/chatops-agentops/: README.md  main.go  main_test.go
clients/cli-agentops/: README.md  main.go  main_test.go
clients/python-epydios/: README.md  pyproject.toml  setup.py
clients/python-epydios/examples/: submit_and_wait.py
clients/python-epydios/src/epydios_client/: __init__.py  client.py
clients/python-epydios/src/epydios_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
clients/python-epydios/tests/: test_client.py
clients/testdata/: m19-cross-surface-parity.json  m20-governed-report-parity.json
clients/vscode-agentops/: README.md  extension.js  package.json
clients/workflow-agentops/: README.md  main.go  main_test.go
cmd/control-plane-runtime/: main.go
cmd/desktop-provider-check/: main.go  main_test.go
cmd/desktop-provider-mock/: main.go
cmd/desktop-provider-openfang/: main.go  main_test.go  runtime_adapter_integration_test.go
cmd/evidence-provider-memory/: main.go
cmd/ip-intake-check/: main.go  main_test.go
docs/: README.md  aimxs-plugin-slot.md  architecture.md  getting-started.md  oss-premium-policy.md  pilot-readiness-signoff-draft.json  pilot-readiness-signoff-draft.md  quality-story.md  release-policy.md  runtime-orchestration-service.md
provenance/: README.md  images.lock.yaml
provider-reference/: README.md
(+433 files in other folders)
