[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "epydios-client"
version = "0.3.0"
description = "Thin Python client SDK for the Epydios localhost gateway"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Epydios" }
]
license = { text = "Apache-2.0" }
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
